--- a/src/main/resources/templates/change-password.html
+++ b/src/main/resources/templates/change-password.html
@@ -1,56 +1,38 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta content="IE=edge" http-equiv="X-UA-Compatible">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>ECinema Theaters</title>
-    <link href="../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet">
-    <link href="../static/img/logo.png" th:href="@{/img/logo.png}" rel="shortcut"/>
-    <link href="https://fonts.googleapis.com" rel="preconnect">
-    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;
-    0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-          rel="stylesheet">
-    <link href="https://fonts.googleapis.com" rel="preconnect">
-    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
-    <link href="https://fonts.googleapis.com/css2?family=Limelight&display=swap" rel="stylesheet">
-</head>
+<head th:insert="fragments/header :: header"></head>
 <body>
-<nav class="naviBar">
-    <a class="logo" th:href="@{/index}">
-        ECinema<span> Entertainment</span>
-    </a>
-    <a th:href="@{/index}">Home</a>
-    &nbsp;
-    &nbsp;
-    &nbsp;
-    <a th:href="@{/movies}">Movies</a>
-    &nbsp;
-    &nbsp;
-    &nbsp;
-    <a th:href="@{/about}">About</a>
-    &nbsp;
-    &nbsp;
-    &nbsp;
-    <a th:href="@{/account}">Account</a>
-    &nbsp;
-    &nbsp;
-    &nbsp;
-</nav>
-<div class="profileContainer">
+<nav th:insert="fragments/webpage-top :: webpage-top"></nav>
+<div th:insert="fragments/errors :: errors"></div>
+<div class="form-group">
+    <h1 class="bold-white-text center-text">Change Password</h1>
     <form th:object="${changePasswordForm}" th:action="@{/change-password}" method="post">
+        <input type="hidden" th:field="*{email}" th:value="${email}">
+        <input type="hidden" th:field="*{question1}" th:value="${securityQuestion1}">
+        <input type="hidden" th:field="*{question2}" th:value="${securityQuestion2}">
         <table class="table table-bordered table-striped">
-            <tr th:if="${loggedIn == false}">
-                <td>Email:</td>
-                <td><label><input th:field="*{email}" type="text" required></label></td>
+            <tr>
+                <td>Security Question 1:</td>
+                <td th:text="${securityQuestion1}"></td>
             </tr>
             <tr>
-                <td>Password:</td>
+                <td>Answer to Security Question 1:</td>
+                <td><label><input th:field="*{answer1}" type="text" required></label></td>
+            </tr>
+            <tr>
+                <td>Security Question 2:</td>
+                <td th:text="${securityQuestion2}"></td>
+            </tr>
+            <tr>
+                <td>Answer to Security Question 2:</td>
+                <td><label><input th:field="*{answer2}" type="text" required></label></td>
+            </tr>
+            <tr>
+                <td>New Password:</td>
                 <td><label><input th:field="*{password}" type="password" required></label></td>
             </tr>
             <tr>
-                <td>Confirm Password:</td>
+                <td>Confirm New Password:</td>
                 <td><label><input th:field="*{confirmPassword}" type="password" required></label></td>
             </tr>
             <tr>
@@ -58,11 +40,6 @@
             </tr>
         </table>
     </form>
-    <table class="table table-bordered table-striped">
-        <tr th:each="error:${errors}">
-            <td th:text="${error}"></td>
-        </tr>
-    </table>
 </div>
 </body>
 </html>
