--- a/src/main/resources/templates/fragments/errors.html
+++ b/src/main/resources/templates/fragments/errors.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <body>
-<div th:fragment="errors">
-    <div class="container">
-        <table class="table table-bordered table-striped">
-            <tr th:each="error:${errors}">
-                <td th:text="${error}"></td>
-            </tr>
-        </table>
-    </div>
+<div th:fragment="errors" th:if="${errors != null}">
+    <h1 class="bold-white-text center-text">ERRORS</h1>
+    <table class="table table-bordered table-striped">
+        <tr th:each="error:${errors}">
+            <td th:text="${error}"></td>
+        </tr>
+    </table>
 </div>
 </body>
 </html>
