--- a/src/main/resources/templates/message-page.html
+++ b/src/main/resources/templates/message-page.html
@@ -3,7 +3,7 @@
 <head th:insert="fragments/header :: header"></head>
 <body>
 <nav th:insert="fragments/webpage-top :: webpage-top"></nav>
-<div class="info">
+<div class="info bold-white-text center-text line-breaks">
     <span th:if="${message != null}" th:text="${message}" style="font-size: x-large"></span>
 </div>
 </body>
