--- a/src/main/resources/templates/submit-registration.html
+++ b/src/main/resources/templates/submit-registration.html
@@ -3,8 +3,9 @@
 <head th:insert="fragments/header :: header"></head>
 <body>
 <nav th:insert="fragments/webpage-top :: webpage-top"></nav>
+<div th:insert="fragments/errors :: errors"></div>
 <div class="form-group">
-    <h1>Register</h1>
+    <h1 class="bold-white-text center-text">Register</h1>
     <form method="post" th:action="@{/submit-registration}" th:object="${registrationForm}">
         <table class="table table-bordered table-striped">
             <tr>
