--- a/src/main/resources/templates/write-review.html
+++ b/src/main/resources/templates/write-review.html
@@ -7,11 +7,7 @@
     <div class="row">
         <img th:src="${movie.image}" width="400" height="500" src="" alt="">
     </div>
-    <table class="table table-bordered table-striped">
-        <tr th:each="error:${errors}">
-            <td th:text="${error}"></td>
-        </tr>
-    </table>
+    <div th:insert="fragments/errors :: errors"></div>
     <form method="post" th:action="@{/write-review/{id}(id=${reviewForm.movieId})}" th:object="${reviewForm}">
         <table class="table table-bordered table-striped">
             <tr>
