--- a/src/main/resources/templates/change-password.html
+++ b/src/main/resources/templates/change-password.html
@@ -3,8 +3,8 @@
 <head th:insert="fragments/header :: header"></head>
 <body>
 <nav th:insert="fragments/webpage-top :: webpage-top"></nav>
-<div th:insert="fragments/errors :: errors"></div>
-<div class="form-group">
+<div class="container">
+    <div th:insert="fragments/errors :: errors"></div>
     <h1 class="bold-white-text center-text">Change Password</h1>
     <form th:object="${changePasswordForm}" th:action="@{/change-password}" method="post">
         <input type="hidden" th:field="*{email}" th:value="${email}">
