--- a/src/main/resources/templates/edit-user-profile.html
+++ b/src/main/resources/templates/edit-user-profile.html
@@ -3,11 +3,11 @@
 <head th:insert="fragments/header :: header"></head>
 <body>
 <nav th:insert="fragments/webpage-top :: webpage-top"></nav>
-<div th:insert="fragments/back-to-profile-page :: back-to-profile-page"></div>
-<div th:insert="fragments/errors :: errors"></div>
-<div class="form-group">
-    <h1>Edit Profile</h1>
-    <form method="post" th:action="@{/edit-user-profile/{id}(id=${userId})}" th:object="${profileForm}">
+<div class="container">
+    <div th:insert="fragments/back-to-profile-page :: back-to-profile-page"></div>
+    <div th:insert="fragments/errors :: errors"></div>
+    <h1 class="bold-white-text center-text">Edit Profile</h1>
+    <form method="post" th:action="@{/edit-user-profile}" th:object="${profileForm}">
         <table class="table table-bordered table-active">
             <tr>
                 <td>First Name:</td>
@@ -24,7 +24,13 @@
             <tr>
                 <td>Birth Date:</td>
                 <td>
-                    <label><input th:field="*{birthDate}" type="date"></label>
+                    <label><input th:field="*{birthDate}" th:value="${profileForm.birthDate}"
+                                  type="date" th:min="${minDate}" th:max="${maxDate}"></label>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <input type="submit" value="submit">
                 </td>
             </tr>
         </table>
