--- a/src/main/resources/templates/management.html
+++ b/src/main/resources/templates/management.html
@@ -3,47 +3,61 @@
 <head th:insert="fragments/header :: header"></head>
 <body>
 <nav th:insert="fragments/webpage-top :: webpage-top"></nav>
-<div th:insert="fragments/errors :: errors"></div>
 <div class="container">
+    <div th:insert="fragments/errors :: errors"></div>
     <div th:if="${moderator == true}">
         <h1 class="bold-white-text center-text">Moderator Management</h1>
-        <table class="table table-bordered table-striped">
+        <table>
             <tbody>
             <tr>
                 <td>Manage Censorship:</td>
-                <td><a class="btn btn-primary" th:href="@{/moderator-reports}">Reports of Policy Violation</a></td>
-                <td><a class="btn btn-primary" th:href="@{/moderator-censorship}">Censorship of Customers</a></td>
+                <td><a class="btn btn-outline-primary btn-block m-1"
+                       th:href="@{/moderator-reports}">Reports of Policy Violation</a></td>
+                <td><a class="btn btn-outline-primary btn-block m-1"
+                       th:href="@{/moderator-censorship}">Censorship of Customers</a></td>
             </tr>
             </tbody>
         </table>
     </div>
     <div th:if="${admin == true}">
         <h1 class="bold-white-text center-text">Admin Management</h1>
-        <table class="table table-bordered table-striped">
+        <table>
             <tbody>
             <tr>
                 <td>Manage Movies:</td>
-                <td><a class="btn btn-primary" th:href="@{/add-movie}">Add New Movie</a></td>
-                <td><a class="btn btn-primary" th:href="@{/edit-movie-search}">Edit Movie</a></td>
-                <td><a class="btn btn-primary" th:href="@{/delete-movie-search}">Delete Movie</a></td>
+                <td><a class="btn btn-outline-primary btn-block m-1"
+                       th:href="@{/add-movie}">Add New Movie</a></td>
+                <td><a class="btn btn-outline-primary btn-block m-1"
+                       th:href="@{/edit-movie-search}">Edit Movie</a></td>
+                <td><a class="btn btn-outline-primary btn-block m-1"
+                       th:href="@{/delete-movie-search}">Delete Movie</a></td>
             </tr>
             <tr>
                 <td>Manage Showrooms:</td>
-                <td><a class="btn btn-primary" th:href="@{/add-showroom}">Add New Showroom</a></td>
-                <td><a class="btn btn-primary" th:href="@{/edit-showroom}">Edit Showroom</a></td>
-                <td><a class="btn btn-primary" th:href="@{/delete-showroom}">Delete Showroom</a></td>
+                <td><a class="btn btn-outline-primary btn-block m-1"
+                       th:href="@{/add-showroom}">Add New Showroom</a></td>
+                <td><a class="btn btn-outline-primary btn-block m-1"
+                       th:href="@{/edit-showroom}">Edit Showroom</a></td>
+                <td><a class="btn btn-outline-primary btn-block m-1"
+                       th:href="@{/delete-showroom}">Delete Showroom</a></td>
             </tr>
             <tr>
                 <td>Manage Screenings:</td>
-                <td><a class="btn btn-primary" th:href="@{/add-screening-search}">Add New Screening</a></td>
-                <td><a class="btn btn-primary" th:href="@{/edit-screening-search}">Edit Screening</a></td>
-                <td><a class="btn btn-primary" th:href="@{/delete-screening-search}">Delete Screening</a></td>
+                <td><a class="btn btn-outline-primary btn-block m-1"
+                       th:href="@{/add-screening-search}">Add New Screening</a></td>
+                <td><a class="btn btn-outline-primary btn-block m-1"
+                       th:href="@{/edit-screening-search}">Edit Screening</a></td>
+                <td><a class="btn btn-outline-primary btn-block m-1"
+                       th:href="@{/delete-screening-search}">Delete Screening</a></td>
             </tr>
             <tr>
                 <td>Admin Management:</td>
-                <td><a class="btn btn-primary" th:href="@{/manage-users}">Manage Users</a></td>
-                <td><a class="btn btn-primary" th:href="@{/manage-tickets}">Manage Tickets</a></td>
-                <td><a class="btn btn-primary" th:href="@{/manage-reports}">Manage Reports</a></td>
+                <td><a class="btn btn-outline-primary btn-block m-1"
+                       th:href="@{/manage-users}">Manage Users</a></td>
+                <td><a class="btn btn-outline-primary btn-block m-1"
+                       th:href="@{/manage-tickets}">Manage Tickets</a></td>
+                <td><a class="btn btn-outline-primary btn-block m-1"
+                       th:href="@{/manage-reports}">Manage Reports</a></td>
             </tr>
             </tbody>
         </table>
