--- a/src/main/resources/templates/message-page.html
+++ b/src/main/resources/templates/message-page.html
@@ -6,5 +6,10 @@
 <div class="info bold-white-text center-text line-breaks">
     <span th:if="${message != null}" th:text="${message}" style="font-size: x-large"></span>
 </div>
+<div class="centerbutton" th:if="${redirectLink != null}">
+    <form method="get" th:action="@{${redirectLink}}">
+        <button class="btn btn-primary" th:text="${redirectMessage}"></button>
+    </form>
+</div>
 </body>
 </html>
