--- a/src/main/resources/templates/movie-info.html
+++ b/src/main/resources/templates/movie-info.html
@@ -5,7 +5,7 @@
 <nav th:insert="fragments/webpage-top :: webpage-top"></nav>
 <div class="container">
     <form method="get" th:action="@{/movies}">
-        <button class="btn btn-primary">Go Back to Movies page</button>
+        <button class="btn btn-outline-primary">Go Back to Movies page</button>
     </form>
     <div class="row">
         <h1 th:text="${movie.title}"></h1>
@@ -42,7 +42,7 @@
     </table>
 </div>
 <div class="moviesContainer">
-    <table style="border: red solid 2px">
+    <table class="table table-bordered table-striped" style="border: red solid 2px">
         <tbody>
         <tr>
             <td class="boldtext">Director</td>
