--- a/src/main/resources/templates/movie-screenings.html
+++ b/src/main/resources/templates/movie-screenings.html
@@ -5,27 +5,22 @@
 <nav th:insert="fragments/webpage-top :: webpage-top"></nav>
 <div class="container">
     <form method="get" th:action="@{/movie-info/{id}(id=${movieId})}">
-        <button class="btn btn-primary">Go Back to Movie Info Page</button>
+        <button class="btn btn-outline-success">Go Back to Movie Info Page</button>
     </form>
-    <table class="table-hover">
-        <tr>
-            <td th:if="${totalPages > 0}" th:each="pageNumber:${pageNumbers}">
-                <button class="button" th:text="${pageNumber}">
-                    <a th:href="@{/movies(search=${search}, page=${pageNumber})}"></a>
-                </button>
-            </td>
-        </tr>
-    </table>
-    <table class="table table-bordered table-striped">
-        <thead class="thead-dark">
+    <ul class="list-group-horizontal" th:if="${totalPages > 0}">
+        <li th:each="pageNumber:${pageNumbers}">
+            <a class="btn btn-outline-primary" th:classappend="${page == pageNumber ? 'active' : ''}"
+               th:href="@{/movies(search=${search}, page=${pageNumber})}" th:text="${pageNumber}">
+            </a>
+        </li>
+    </ul>
+    <table>
         <tr>
             <th>Showroom</th>
             <th>Show Time</th>
             <td>End Time</td>
             <th>Seats Available</th>
         </tr>
-        </thead>
-        <tbody>
         <tr th:each="screening:${screenings}" style="border: red">
             <td th:text="${screening.showroomLetter}"></td>
             <td th:text="${screening.showDateTimeFormatted()}"></td>
@@ -33,11 +28,10 @@
             <td th:text="${screening.seatsAvailable} + '/' + ${screening.totalSeatsInRoom}"></td>
             <td>
                 <form method="get" th:action="@{/choose-seats-to-book(id=${screening.id})}">
-                    <button class="button" style="font-size: xx-large">Book Seats</button>
+                    <button class="btn-outline-primary" style="font-size: xx-large">Book Seats</button>
                 </form>
             </td>
         </tr>
-        </tbody>
     </table>
 </div>
 </body>
