--- a/src/main/resources/templates/admin-movie-choose.html
+++ b/src/main/resources/templates/admin-movie-choose.html
@@ -4,9 +4,14 @@
 <body>
 <nav th:insert="fragments/webpage-top :: webpage-top"></nav>
 <div class="container">
-    <h1>Movies</h1>
+    <h1 class="bold-white-text center-text">Movies</h1>
     <br/>
     <div th:insert="fragments/back-to-management-page :: back-to-management-page"></div>
+    <br/>
+    <div th:if="${success != null}">
+        <span class="bold-white-text center-text" th:text="${success}"></span>
+    </div>
+    <br/>
     <table class="table table-bordered table-striped">
         <tbody>
         <tr th:each="movie:${movies}">
