--- a/src/main/resources/templates/choose-screening-to-delete.html
+++ b/src/main/resources/templates/choose-screening-to-delete.html
@@ -2,9 +2,9 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:insert="fragments/header :: header"></head>
 <body>
-<nav th:insert="fragments/webpage-top :: webpage-top">
-    <div th:insert="fragments/back-to-management-page :: back-to-management-page"></div>
-    <br/>
+<nav th:insert="fragments/webpage-top :: webpage-top"></nav>
+<div th:insert="fragments/back-to-management-page :: back-to-management-page"></div>
+<div class="container">
     <h1 class="bold-white-text center-text">Screenings</h1>
     <br/>
     <div th:if="${success != null}">
@@ -17,17 +17,9 @@
             <input type="text" name="search" class="form-control"
                    id="search" size="25" th:value="${search}" required>
         </label>
-        <br/>
-        <label>
-            <ul class="list-group-horizontal" style="list-style-type: none">
-                <li th:each="showroomLetter:${showroomLettersInUse}">
-                    <input type="checkbox" name="letterChecked"
-                           th:text="${showroomLetter}" th:value="${showroomLetter}">
-                </li>
-            </ul>
-        </label>
-        <button class="button" type="submit">Go</button>
+        <input type="submit" value="submit">
     </form>
+    <br/>
     <table class="table-hover">
         <tr>
             <td th:if="${totalPages > 0}" th:each="pageNumber:${pageNumbers}">
@@ -39,24 +31,29 @@
             </td>
         </tr>
     </table>
+    <br/>
     <table class="table table-bordered table-striped">
         <tr>
             <th>Showroom</th>
+            <th>Movie</th>
             <th>Show Time</th>
             <td>End Time</td>
+            <td>Seats Available</td>
+            <td>Action</td>
         </tr>
         <tr th:each="screening:${screenings}">
             <td th:text="${screening.showroomLetter}"></td>
+            <td th:text="${screening.movieTitle}"></td>
             <td th:text="${screening.showDateTimeFormatted()}"></td>
             <td th:text="${screening.endDateTimeFormatted()}"></td>
             <td th:text="${screening.seatsAvailable} + '/' + ${screening.totalSeatsInRoom}"></td>
             <td>
-                <form method="get" th:action="@{/delete-screening(id=${screening.id})}">
+                <form method="get" th:action="@{/delete-screening/{id}(id=${screening.id})}">
                     <button class="btn btn-outline-danger">Delete Screening</button>
                 </form>
             </td>
         </tr>
     </table>
-</nav>
+</div>
 </body>
 </html>
